--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,7 @@
     tools:context="com.anthony.marco.doodlejump.MainActivity">
 
     <com.anthony.marco.doodlejump.DoodleSurfaceView
+        android:id="@+id/doodle_surface_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
