--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
 
     <include
         android:id="@+id/game_buttons"
-        layout="@layout/game_buttons"
+        layout="@layout/game_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:visibility="gone" />
