--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,9 +4,9 @@
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.anthony.marco.doodlejump.MainActivity">
+    tools:context="com.anthony.marco.doodlejump.view.MainActivity">
 
-    <com.anthony.marco.doodlejump.DoodleSurfaceView
+    <com.anthony.marco.doodlejump.view.DoodleSurfaceView
         android:id="@+id/doodle_surface_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
