--- a/app/src/main/res/layout/game_layout.xml
+++ b/app/src/main/res/layout/game_layout.xml
@@ -9,7 +9,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:textColor="@android:color/holo_green_dark"
+        android:textColor="@color/scoreColor"
         tools:text="123" />
 
     <Button xmlns:android="http://schemas.android.com/apk/res/android"
