--- a/app/src/main/res/layout/main_menu_buttons.xml
+++ b/app/src/main/res/layout/main_menu_buttons.xml
@@ -10,7 +10,7 @@
         android:orientation="vertical">
 
         <Button
-            android:id="@+id/start_game_button"
+            android:id="@+id/new_game_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/start_game" />
