--- a/app/src/main/res/layout/game_layout.xml
+++ b/app/src/main/res/layout/game_layout.xml
@@ -12,6 +12,14 @@
         android:textColor="@color/scoreColor"
         tools:text="123" />
 
+    <TextView
+        android:id="@+id/player_timer"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:textColor="@color/scoreColor"
+        android:gravity="center_horizontal"
+        tools:text="10:00" />
+
     <Button xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/stop_game_button"
         android:layout_width="wrap_content"
