--- a/app/src/main/res/layout/new_game_layout.xml
+++ b/app/src/main/res/layout/new_game_layout.xml
@@ -35,5 +35,13 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:text="@string/start_game" />
+
+        <Button
+            android:id="@+id/new_game_back_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:text="@string/back" />
     </LinearLayout>
+
 </RelativeLayout>
