--- a/app/src/main/res/layout/game_overlay_fragment.xml
+++ b/app/src/main/res/layout/game_overlay_fragment.xml
@@ -13,7 +13,7 @@
         tools:text="123" />
 
     <TextView
-        android:id="@+id/player_timer"
+        android:id="@+id/timer_text_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:textColor="@color/scoreColor"
