Added support for buttons in the scene overlays.

--- a/app/src/main/res/layout/game_overlay_fragment.xml
+++ b/app/src/main/res/layout/game_overlay_fragment.xml
@@ -12,10 +12,10 @@
         android:gravity="center_horizontal"
         tools:text="10:00" />
 
-    <Button
+    <!--<Button
         android:id="@+id/stop_game_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
-        android:text="@string/stop" />
+        android:text="@string/stop" />-->
 </RelativeLayout>
